@@ -1,4 +1,3 @@
-- Open as many task properties dialogs as necessary.
 - Show exceptions using gtk.MessageDialog.
 
 Email suggestions to <hex@umonkey.net>, add "NoAgenda" to the subject line to bypass the spam filter.
